# cash

./: .gitignore  LICENSE  README.md  cabal.config  cash.cabal  stack.yaml
app/: Main.hs
src/: Algebra.hs
src/Engine/: Base.hs  Compile.hs  Engine.hs  Expression.hs  Samples.hs  Util.hs
src/Engine/Expression/: Common.hs  Core.hs
src/Engine/Expression/Format/: Pretty.hs
src/Engine/Rules/: Canonical.hs  Diff.hs  Simplify.hs
src/Tests/: Base.hs  Samples.hs  Tests.hs  Util.hs
src/Tests/Engine/Expression/: Base.hs
src/Tests/Engine/Rules/: Simplify.hs
