name:                cash
version:             0.1.0.0
synopsis:            Computer algebra system (in) Haskell
description:         Please see README.md
homepage:            http://github.com/mikeswoods/cash#readme
license:             MIT
license-file:        LICENSE
author:              Mike Woods
maintainer:          mikeswoods@gmail.com
copyright:           2015 Mike Woods
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algebra
                     , Tests.Base
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , template-haskell
                     , pretty-show
                     , HUnit
                     , mtl
  default-language:    Haskell2010

executable cash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fno-warn-type-defaults
  build-depends:       base
                     , cash
                     , parsec
                     , containers
                     , template-haskell
                     , pretty-show
                     , HUnit
                     , mtl
  default-language:    Haskell2010

test-suite cash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cash
                     , parsec
                     , containers
                     , template-haskell
                     , pretty-show
                     , HUnit
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mikeswoods/cash
