name:                cash
version:             0.1.0.0
synopsis:            Computer algebra system (in) Haskell
description:         Please see README.md
homepage:            http://github.com/mikeswoods/cash#readme
license:             MIT
license-file:        LICENSE
author:              Mike Woods
maintainer:          mikeswoods@gmail.com
copyright:           2015 Mike Woods
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Engine.Engine
                     , Engine.Samples
                     , Tests.Tests
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , template-haskell
                     , pretty
                     , random
                     , containers
                     , HUnit
                     , QuickCheck
                     , mtl
  default-language:    Haskell2010
  other-modules:       Engine.Engine
                     , Engine.Expression.Common
                     , Engine.Expression.Core
                     , Engine.Expression.Format.Pretty
                     , Engine.Rules.Diff
                     , Engine.Rules.Simplify
                     , Engine.Util
                     , Tests.Engine.Expression.Base
                     , Tests.Engine.Rules.Simplify

executable cash-exe
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fno-warn-type-defaults
  build-depends:       base
                     , cash
                     , parsec
                     , template-haskell
                     , random
                     , containers
                     , pretty
                     , HUnit
                     , QuickCheck
                     , mtl
  default-language:    Haskell2010
  other-modules:       Engine.Engine
                     , Engine.Expression.Common
                     , Engine.Expression.Core
                     , Engine.Expression.Format.Pretty
                     , Engine.Rules.Diff
                     , Engine.Rules.Simplify
                     , Engine.Util
                     , Tests.Engine.Expression.Base
                     , Tests.Engine.Rules.Simplify

test-suite cash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cash
                     , parsec
                     , template-haskell
                     , random
                     , containers
                     , pretty
                     , HUnit
                     , QuickCheck
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mikeswoods/cash
